# Toader

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: animation.h  animationmap.h  entity.h  macros.h  map.h  screen.h  soundmap.h  sprite.h  spritemap.h  text.h  toader.h  tween.h
include/behaviors/: toadhurt.h  toadstick.h
include/entities/: lilypad.h  truck.h
src/: animation.c  animationmap.c  entity.c  main.c  map.c  screen.c  soundmap.c  sprite.c  spritemap.c  text.c  toader.c  tween.c
src/behaviors/: toadhurt.c  toadstick.c
src/entities/: lilypad.c  truck.c
